k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: krampoline
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 3000
        path: /
        pathType: Prefix
      - backend:
          serviceName: backend
          servicePort: 3001
        path: /api
        pathType: Prefix
